# tech-support

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_hnsw_vector_index.py
backend/app/: dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  chat.py  documents.py  feedback.py  health.py  sessions.py  voice.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: engine.py
backend/app/db/repositories/: chunk_repo.py  document_repo.py  feedback_repo.py  session_repo.py
backend/app/ingestion/chunkers/: base.py  fixed_size_chunker.py  semantic_chunker.py
backend/app/ingestion/loaders/: base.py  markdown_loader.py  path_validator.py  pdf_loader.py  url_validator.py  web_loader.py
backend/app/ingestion/processors/: metadata_extractor.py  text_cleaner.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  base.py  document.py  feedback.py  session.py
backend/app/providers/: base.py
backend/app/providers/embeddings/: litellm_embeddings.py  sentence_transformer_embeddings.py
backend/app/schemas/: chat.py  common.py  documents.py  feedback.py
backend/app/services/: confidence.py  escalation.py  ingestion_pipeline.py  persona.py  rag_pipeline.py  session_manager.py
backend/app/workers/: ingestion_worker.py
backend/config/: default.yaml
backend/config/persona/: default.yaml
backend/scripts/: ingest_pdfs.py  ingest_sample_docs.py
backend/tests/: conftest.py
backend/tests/unit/: test_chunkers.py  test_confidence.py  test_persona.py  test_rrf.py  test_text_cleaner.py
frontend/: Dockerfile  index.html  nginx.conf  (+2 more)
(+31 files in other folders)
